add user update & irrigation update
